--- a/Vision/Views/Shared/_Layout.cshtml
+++ b/Vision/Views/Shared/_Layout.cshtml
@@ -38,6 +38,17 @@
                             </div>
                         </li>
 
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                User 
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-area="Admin" asp-controller="User" asp-action="Index">User</a>
+
+                            </div>
+                        </li>
+
+
                     </ul>
                 </div>
             </div>
