--- a/Vision/Areas/Customer/Views/Home/Index.cshtml
+++ b/Vision/Areas/Customer/Views/Home/Index.cshtml
@@ -1,39 +1,87 @@
 ﻿@model Vision.Models.ViewModels.HomeViewModel
+    <div class="container-fluid">
+        <div id="demo" class="carousel slide" data-ride="carousel">
 
-@foreach (var category in Model.CategoryList.OrderBy(o => o.DisplayOrder))
-{
-    @if (Model.ServiceList.Where(c => c.CategoryId == category.Id).Count() > 0)
-    {
-        <div class="row container pb-3 backgroundWhite">
-            <div class="col-12">
-                <div class="row">
-                    <h2 class="text-success"><b>@category.Name</b></h2>
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+            </ul>
 
+
+            <!-- The slideshow -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="~/images/lawn1.jpeg" alt="Los Angeles" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/lawn2.jpeg" alt="Chicago" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/images/lawn3.jpeg" alt="New York" width="1100" height="500">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+
+
+        @foreach (var category in Model.CategoryList.OrderBy(o => o.DisplayOrder))
+        {
+            @if (Model.ServiceList.Where(c => c.CategoryId == category.Id).Count() > 0)
+            {
+                <div class="row container pb-3 backgroundWhite">
                     <div class="col-12">
-                        <div class="row my-3">
-                            @foreach (var service in Model.ServiceList.Where(c => c.CategoryId == category.Id))
-                            {
-                                <div class="col-lg-4 col-xl-3 col-md-6 pb-4">
-                                    <div class="card" style="border:2px solid #43ac6a;border-radius:5px; background:url('/images/leaves.png')">
-                                        <div class="pl-3 pt-1 text-center">
-                                            <h3 class="card-title text-primary"><b>@service.Name</b></h3>
-                                        </div>
-                                        <div class="d-flex justify-content-between ">
-                                            <div class="pl-1 text-muted">Price per service</div>
-                                            <div class="pr-1 text-danger h5">$@service.Price</div>
-                                        </div>
-                                        <img src="@service.ImageUrl" class="card-img-top p-2 rounded" />
+                        <div class="row">
+                            <h2 class="text-success"><b>@category.Name</b></h2>
 
-                                        <div class="text-muted text-center pb-2">@service.Frequency.Name</div>
-                                        <a asp-action="Details" class="btn btn-success" style="border-radius:2px;"
-                                           asp-route-id="@service.Id">Details</a>
-                                    </div>
+                            <div class="col-12">
+                                <div class="row my-3">
+                                    @foreach (var service in Model.ServiceList.Where(c => c.CategoryId == category.Id))
+                                    {
+                                        <div class="col-lg-4 col-xl-3 col-md-6 pb-4">
+                                            <div class="card" style="border:2px solid #43ac6a;border-radius:5px; background:url('/images/leaves.png')">
+                                                <div class="pl-3 pt-1 text-center">
+                                                    <h3 class="card-title text-primary"><b>@service.Name</b></h3>
+                                                </div>
+                                                <div class="d-flex justify-content-between ">
+                                                    <div class="pl-1 text-muted">Price per service</div>
+                                                    <div class="pr-1 text-danger h5">$@service.Price</div>
+                                                </div>
+                                                <img src="@service.ImageUrl" class="card-img-top p-2 rounded" />
+
+                                                <div class="text-muted text-center pb-2">@service.Frequency.Name</div>
+                                                <a asp-action="Details" class="btn btn-success" style="border-radius:2px;"
+                                                   asp-route-id="@service.Id">Details</a>
+                                            </div>
+                                        </div>
+                                    }
                                 </div>
-                            }
+                            </div>
                         </div>
                     </div>
                 </div>
+            }
+        }
+
+        @foreach (var item in Model.TeamList)
+        {
+
+
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">
+                <div class="card-body">
+                    <h3>@item.Name</h3>
+                    <h4>@item.Role</h4>
+                    <p class="card-text">@item.Description.</p>
+                </div>
             </div>
-        </div>
-    }
-}
+        }
+    </div>
