--- a/Vision/Views/Shared/_Layout.cshtml
+++ b/Vision/Views/Shared/_Layout.cshtml
@@ -15,11 +15,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
 
+    
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Vision</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +58,7 @@
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
 
                                 </div>
-                                                           
+
                             </li>
                         }
 
@@ -88,7 +89,7 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
@@ -111,5 +112,5 @@
     <script src="https://kit.fontawesome.com/8d479b36d5.js" crossorigin="anonymous"></script>
 
     @RenderSection("Scripts", required: false)
-</body>
+    </body>
 </html>
