--- a/Vision/wwwroot/css/site.css
+++ b/Vision/wwwroot/css/site.css
@@ -6,9 +6,11 @@ a.navbar-brand {
   text-align: center;
   word-break: break-all;
 }
-
-/* Provide sufficient contrast against white background */
-a {
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+    /* Provide sufficient contrast against white background */
+    a {
   color: #0366d6;
 }
 
