--- a/Vision/Views/Shared/_Layout.cshtml
+++ b/Vision/Views/Shared/_Layout.cshtml
@@ -10,12 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Vision</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+
+
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
 
-    
+
 </head>
 <body>
     <header>
@@ -62,29 +64,29 @@
                             </li>
                         }
 
-                            @if (HttpContextAccessor.HttpContext.Session.GetObject<List<int>>(SD.SessionCart) != null)
-                            {
-                                <li style="color:white">
-                                    <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="nav-link text-white">
-                                        @{
-                                            var count = HttpContextAccessor.HttpContext.Session.GetObject<List<int>>(SD.SessionCart).Count;
-                                        }
-                                        <i class="fas fa-shopping-cart"></i>&nbsp; (@count)
-                                    </a>
-                                </li>
-                            }
-                            else
-                            {
-                                <li style="color:white">
-                                    <a href="#" class="nav-link text-white">
+                        @if (HttpContextAccessor.HttpContext.Session.GetObject<List<int>>(SD.SessionCart) != null)
+                        {
+                            <li style="color:white">
+                                <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="nav-link text-white">
+                                    @{
+                                        var count = HttpContextAccessor.HttpContext.Session.GetObject<List<int>>(SD.SessionCart).Count;
+                                    }
+                                    <i class="fas fa-shopping-cart"></i>&nbsp; (@count)
+                                </a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li style="color:white">
+                                <a href="#" class="nav-link text-white">
 
-                                        <i class="fas fa-shopping-cart"></i>&nbsp; (0)
-                                    </a>
-                                </li>
-                            }
+                                    <i class="fas fa-shopping-cart"></i>&nbsp; (0)
+                                </a>
+                            </li>
+                        }
 
 
-                        </ul>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -102,6 +104,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/typed.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -112,5 +115,5 @@
     <script src="https://kit.fontawesome.com/8d479b36d5.js" crossorigin="anonymous"></script>
 
     @RenderSection("Scripts", required: false)
-    </body>
+</body>
 </html>
