--- a/Vision/Areas/Admin/Views/Book/Index.cshtml
+++ b/Vision/Areas/Admin/Views/Book/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Upsert" class="btn btn-info">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -47,7 +47,8 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                <img  src="@Html.DisplayFor(modelItem => item.Image)" />
+                <img  src="@Html.DisplayFor(modelItem => item.Image)" height="50"
+                     width="50"/>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DepartFrom)
