--- a/Vision/Areas/Admin/Views/Book/Upsert.cshtml
+++ b/Vision/Areas/Admin/Views/Book/Upsert.cshtml
@@ -67,6 +67,25 @@
             </div>
             <div class="form-group row">
                 <div class="col-4">
+                    <label asp-for="Price"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Price" class="form-control" />
+                    <span asp-validation-for="Price" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Price50"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Price50" class="form-control" />
+                    <span asp-validation-for="Price50" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-4">
                     <label asp-for="Begin"></label>
                 </div>
                 <div class="col-8">
