--- a/Vision/Areas/Customer/Views/Home/Index.cshtml
+++ b/Vision/Areas/Customer/Views/Home/Index.cshtml
@@ -1,22 +1,23 @@
 ﻿@model Vision.Models.ViewModels.HomeViewModel
-
-<section class="new">
-    <div class="titles">
-        <div class="titles-wrap">
-            <h1>We'are<span> Shan Group</span></h1>
-            <h2><span class="txt-rotate">   </span></h2>
-            <div class="getintouch">
-                <div>
-                    <a asp-area="Customer" asp-controller="Contact"
-                       asp-action="Upsert" class="btn" style="width:auto;">
-                        Get In Touch
-
-                    </a>
-                </div>
+    <div class="jumbotron ">
+        <h1 class="display-4">IT Services</h1>
+        <p class="lead">
+            Our team is experienced in latest technologies. <br />
+            We work with you to manage all elements of your online bussiness <br />
+            in an efficient, cost effective and ethical manner.
+        </p>
+        <hr class="my-4">
+        <div class="titles">
+            <div class="titles-wrap">
+                <h1>We'are<span> Shan Group</span></h1>
+                <h2><span class="txt-rotate">   </span></h2>
+                
             </div>
         </div>
+
     </div>
-</section>
+<br />
+
 
 
 @foreach (var category in Model.CategoryList.OrderBy(o => o.DisplayOrder))
@@ -58,68 +59,105 @@
     }
 }
 <br />
-<br />
-<h2 class="font-weight-bolder">Our Team</h2>
-@foreach (var item in Model.TeamList)
-{
+<section class="container-fluid">
+    <h2 class="h1-responsive font-weight-bold text-center my-4">Team Leaders</h2>
 
-
-    <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="@item.ImageUrl" alt="Card image cap">
-        <div class="card-body">
-            <h3>@item.Name</h3>
-            <h4>@item.Role</h4>
-            <p class="card-text">@item.Description.</p>
-        </div>
-
-    </div>
-
-}
-
-<br />
-<br />
-<h2 class="font-weight-bolder">What Out Customer Say About US</h2>
-@foreach (var item in Model.FeedbackList)
-{
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">@item.ApplicationUser.Name</h5>
-            @*<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>*@
-            <p class="card-text blockquote"><i>"@item.Comment"</i></p>
-            @*<a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>*@
-        </div>
-    </div>
-}
-
-
-
-<br />
-<div class="container">
-    <div style="text-align:center">
-        <h2>Contact Us</h2>
-        <p>Swing by for a cup of coffee, or leave us a message:</p>
-    </div>
+    <h2 class="font-weight-bolder">Our Team</h2>
     <div class="row">
-        <div class="column">
-            <img src="~/images/map.jpg" style="width:100%">
-        </div>
-        <div class="column">
-            <form method="post">
-                <label for="fname"> Name</label>
-                <input type="text" id="fname" asp-for="Contact.Name"  placeholder="Your name..">
-                <label asp-for="Contact.Email"> Email</label>
-                <input type="text" id="fname" asp-for="Contact.Email" placeholder="Your email..">
+        @foreach (var item in Model.TeamList)
+        {
 
-                <label asp-for="Contact.Message">Messages</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-                <input type="submit" value="Submit">
+
+            <div class="col-3" style="width: 18rem;">
+                <h3>@item.Name</h3>
+                <hr />
+                <h5>@item.Role</h5>
+
+            </div>
+
+        }
+    </div>
+</section>
+<br />
+<section class="container-fluid">
+    <h2 class="h1-responsive font-weight-bold text-center my-4">Feedback of Partners</h2>
+    <div class="row">
+        @foreach (var item in Model.FeedbackList)
+        {
+            <div class="col-3" style="width: 18rem;">
+                <h5 class="card-title">@item.ApplicationUser.Name</h5>
+                @*<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>*@
+                <p class="card-text blockquote"><i>"@item.Comment"</i></p>
+                @*<a href="#" class="card-link">Card link</a>
+                    <a href="#" class="card-link">Another link</a>*@
+            </div>
+        }
+    </div>
+</section>
+
+<br />
+<!--Section: Contact v.2-->
+<section class="container-fluid">
+
+    <!--Section heading-->
+    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+    <!--Section description-->
+    <p class="text-center w-responsive mx-auto mb-5">
+        Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
+        a matter of hours to help you.
+    </p>
+    <div class="row">
+
+        <!--Grid column-->
+        <div class="col-md-9 mb-md-0 mb-5">
+            <form method="post">
+                <div class="form-group">
+                    <label asp-for="Contact.Name">Your Name</label>
+                    <input class="form-control"
+                           asp-for="Contact.Name" placeholder="Enter name">
+                    <span asp-validation-for="Contact.Name" class="text-danger"></span>
+
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Contact.Email">Email address</label>
+                    <input type="email" asp-for="Contact.Email"
+                           required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+
+                </div>
+                <div class="form-group">
+                    <label asp-for="Contact.Message">Messae </label>
+                    <textarea class="form-control" asp-for="Contact.Message"
+                              required rows="4"> </textarea>
+
+
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
+        <!--Grid column-->
+        <!--Grid column-->
+        <div class="col-md-3 text-center">
+            <ul class="list-unstyled mb-0">
+                <li>
+                    <i class="fa fa-address-book"></i>
+                    <h4>San Francisco, CA 94126, USA</h4>
+                </li>
+
+                <li>
+                    <i class="fa fa-phone"></i>
+                    <h4>+ 01 234 567 89</h4>
+                </li>
+
+                <li>
+                    <i class="fa fa-envelope"></i>
+                    <h6>contact@mdbootstrap.com</h6>
+                </li>
+            </ul>
+        </div>
+        <!--Grid column-->
+
     </div>
-</div>
 
-
-
-
-
+</section>
