--- a/Vision/Areas/Customer/Views/Travel/Index.cshtml
+++ b/Vision/Areas/Customer/Views/Travel/Index.cshtml
@@ -3,76 +3,222 @@
     Layout = "~/Views/Shared/_Layout1.cshtml";
 
 }
-    <div class="jumbotron ">
-        <h1 class="display-4">Shan Travel Group</h1>
-        <p class="lead">
-            Shan Travel is an experienced travel management company. <br />
-            We work with you to manage all elements of your travel <br />
-            in an efficient, cost effective and ethical manner.
-        </p>
-        <hr class="my-4">
-        <form class="form-inline" asp-controller="Search" asp-action="Search" method="post">
-            <label class="sr-only" for="inlineFormInputName2">Depart From</label>
-            <input type="text" asp-for="Depart" class="form-control mb-2 mr-sm-2"
-                   id="inlineFormInputName2" placeholder="Depart From">
-            <span asp-validation-for="Depart" class="text-danger"></span>
+<span id="myheading"></span>
+<div class="jumbotron ">
+    <h1 class="display-4">Shan Travel Group</h1>
+    <p class="lead">
+        Shan Travel is an experienced travel management company. <br />
+        We work with you to manage all elements of your travel <br />
+        in an efficient, cost effective and ethical manner.
+    </p>
 
-            <label class="sr-only" for="inlineFormInputGroupUsername2">Arrive To</label>
-            <input type="text" class="form-control" asp-for="Arrival"
-                   id="inlineFormInputGroupUsername2" placeholder="Arrive To">
-            <span asp-validation-for="Arrival" class="text-danger"></span>
+    <div style="margin-left:950px; margin-top:-100px;">
+        <a asp-area="Customer" asp-controller="Home"
+           asp-action="Index" class="btn btn-primary" style="width:auto;">
+            Lets Move To The Technical World
 
-
-
-            <button type="submit" class="btn btn-primary mb-2">Submit</button>
-        </form>
-
+        </a>
     </div>
+    <hr class="my-4">
+    <form class="form-inline" asp-controller="Search" asp-action="Search" method="post">
+        <label class="sr-only" for="inlineFormInputName2">Depart From</label>
+        <input type="text" asp-for="Depart" class="form-control mb-2 mr-sm-2"
+               id="inlineFormInputName2" placeholder="Depart From">
+        <span asp-validation-for="Depart" class="text-danger"></span>
+
+        <label class="sr-only" for="inlineFormInputGroupUsername2">Arrive To</label>
+        <input type="text" class="form-control" asp-for="Arrival"
+               id="inlineFormInputGroupUsername2" placeholder="Arrive To">
+        <span asp-validation-for="Arrival" class="text-danger"></span>
+
+        <label class="sr-only" for="inlineFormInputGroupUsername2">Class</label>
+        <input type="text" class="form-control" asp-for="Class"
+               id="inlineFormInputGroupUsername2" placeholder="Class">
+
+
+        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+    </form>
+
+
+</div>
 <br />
-<br />
-<div class="row container pb-3 backgroundWhite">
-    <div class="col-12">
-        <div class="row">
-            <h2 class="text-dark"><b>The Popular Places</b></h2>
+<div id="div1">
 
-            <div class="col-12">
-                <div class="row my-3">
-                    @foreach (var item in Model.Book)
-                    {
-                        <div class="col-lg-4 col-xl-3 col-md-6 pb-4">
-                            <div class="card" style="border:2px solid black;border-radius:5px; background:url('/images/leaves.png')">
-                                <div class="pl-3 pt-1 text-center">
-                                    <h3 class="card-title text-primary"><b>@item.Class</b></h3>
-                                </div>
-                                <div class="d-flex justify-content-between ">
-                                    <div class="pl-1 text-muted">Price per service</div>
-                                    @*<div class="pr-1 text-danger h5">$@item.</div>*@
-                                </div>
-                                <img src="@item.Image"
-                                     class="card-img-top p-2 rounded " height="150" width="150" />
+    <div class="row container pb-3 backgroundWhite">
+        <div class="col-12">
+            <div class="row">
+                <h2 class="text-dark"><b>The Popular Places</b></h2>
 
-                                <div class="text-muted text-center pb-2"><b>Depart From:</b>@item.DepartFrom</div>
-                                <div class="text-muted text-center pb-2"><b>Arrive To:</b>@item.DepartFrom</div>
-                                <div class="text-muted text-center pb-2">
-                                    <b>Arrival Date:</b>
-                                    @item.Begin
-                                </div>
-                                <div class="text-muted text-center pb-2">
-                                    <b>Return Date:</b>
-                                    @item.End
-                                </div>
+                <div class="col-12">
+                    <div class="row my-3">
+                        @foreach (var item in Model.Book)
+                        {
+                            <div class="col-lg-4 col-xl-3 col-md-6 pb-4">
+                                <div class="card" style="border:2px solid black;border-radius:5px; background:url('/images/leaves.png')">
+                                    <div class="pl-3 pt-1 text-center">
+                                        <h3 class="card-title text-primary"><b>@item.Class</b></h3>
+                                    </div>
+                                    <div class="d-flex justify-content-between ">
+                                        <div class="pl-1 text-muted">Price per service</div>
+                                        @*<div class="pr-1 text-danger h5">$@item.</div>*@
+                                    </div>
+                                    <img src="@item.Image"
+                                         class="card-img-top p-2 rounded " height="150" width="150" />
 
-                                <a asp-action="Details" class="btn btn-dark"
-                                   style="border-radius:2px;"
-                                   asp-route-id="@item.Id">Details</a>
-                                <a asp-action="Quotes" class="btn btn-dark" style="border-radius:2px;"
-                                   asp-route-id="@item.Id">Request A Quote</a>
+                                    <div class="text-muted text-center pb-2">
+                                        <b>Depart From:</b>
+                                        @item.DepartFrom
+                                    </div>
+                                    <div class="text-muted text-center pb-2">
+                                        <b>Arrive To:</b>
+                                        @item.ArriveTo
+                                    </div>
+                                    <div class="text-muted text-center pb-2">
+                                        <b>Arrival Date:</b>
+                                        @item.Begin
+                                    </div>
+                                    <div class="text-muted text-center pb-2">
+                                        <b>Return Date:</b>
+                                        @item.End
+                                    </div>
 
+                                    <a asp-action="Details" class="btn btn-dark"
+                                       style="border-radius:2px;"
+                                       asp-route-id="@item.Id">Details</a>
+                                    <a asp-action="Quotes" class="btn btn-dark" style="border-radius:2px;"
+                                       asp-route-id="@item.Id">Request A Quote</a>
+
+                                </div>
                             </div>
-                        </div>
-                    }
+                        }
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+</div><!--div1 ends here-->
+<!--Section: Contact v.2-->
+<div id="div2">
+
+    <section class="container-fluid">
+
+        <!--Section heading-->
+        <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+        <!--Section description-->
+        <p class="text-center w-responsive mx-auto mb-5">
+            Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
+            a matter of hours to help you.
+        </p>
+        <div class="row">
+
+            <!--Grid column-->
+            <div class="col-md-9 mb-md-0 mb-5">
+                <form method="post">
+                    <div class="form-group">
+                        <label asp-for="Contact.Name">Your Name</label>
+                        <input class="form-control"
+                               asp-for="Contact.Name" placeholder="Enter name">
+                        <span asp-validation-for="Contact.Name" class="text-danger"></span>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label asp-for="Contact.Email">Email address</label>
+                        <input type="email" asp-for="Contact.Email"
+                               required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Contact.Message">Messae </label>
+                        <textarea class="form-control" asp-for="Contact.Message"
+                                  required rows="4"> </textarea>
+
+
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+            <!--Grid column-->
+            <!--Grid column-->
+            <div class="col-md-3 text-center">
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        <i class="fa fa-address-book"></i>
+                        <h4>San Francisco, CA 94126, USA</h4>
+                    </li>
+
+                    <li>
+                        <i class="fa fa-phone"></i>
+                        <h4>+ 01 234 567 89</h4>
+                    </li>
+
+                    <li>
+                        <i class="fa fa-envelope"></i>
+                        <h6>contact@mdbootstrap.com</h6>
+                    </li>
+                </ul>
+            </div>
+            <!--Grid column-->
+
+        </div>
+
+    </section>
+
 </div>
+<br />
+<div >
+
+    <!--Section: Contact v.2-->
+    <section class="container-fluid" id="div3">
+
+        <div class="row text-xl-center">
+            <div class="span12" style="margin-left:450px">
+                <div class="thumbnail center well well-small text-center " id="center">
+                    <h2>Newsletter</h2>
+
+                    <p>Subscribe to our weekly Newsletter and get the best offers.</p>
+
+                    <form asp-action="NewsLetter" method="post">
+                        <div class="input-prepend">
+                            <span class="add-on"><i class="icon-envelope"></i></span>
+                            <input type="email" asp-for="NewsLetter"
+                                   class="form-control" placeholder="your@email.com">
+                            <span asp-validation-for="NewsLetter" class="text-danger"></span>
+
+                        </div>
+                        <br />
+                        <input type="submit" value="Subscribe Now!" class="btn btn-large btn-primary " />
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</div>
+
+<script>
+    var scrollY = 0;
+    var distance = 40;
+    var speed = 24;
+    function autoScrollTo(el) {
+        var currentY = window.pageYOffset;
+        var targetY = document.getElementById(el).offsetTop;
+        var bodyHeight = document.body.offsetHeight;
+        var yPos = currentY + window.innerHeight;
+        var animator = setTimeout('autoScrollTo(\'' + el + '\')', 24);
+        if (yPos > bodyHeight) {
+            clearTimeout(animator);
+        } else {
+            if (currentY < targetY - distance) {
+                scrollY = currentY + distance;
+                window.scroll(0, scrollY);
+            } else {
+                clearTimeout(animator);
+            }
+        }
+    }
+
+
+</script>
