--- a/Vision/Views/Shared/_Layout.cshtml
+++ b/Vision/Views/Shared/_Layout.cshtml
@@ -7,23 +7,39 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Vision</title>
+    <title>@ViewData["Title"] - Shan Group</title>
+
+    <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 
 
-    <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 
 
 </head>
 <body>
     <header>
+        <div style="width:100%;height:50px;background-color: black">
+            <h1 style="height:40px; color:white">Shan Group</h1>
+            <h5 style="margin-left:850px; margin-top:-25px; color:white">
+                <i class="fa fa-phone"></i>
+                123-456-789
+            </h5>
+            <h5 style="margin-left:1050px; margin-top:-25px;color:white">
+                <i class="fa fa-envelope"></i>
+                shan999@gmail.com
+            </h5>
+
+        </div>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Vision</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" 
+                   asp-action="Index">IT SECTION</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,6 +65,25 @@
                                 </div>
                             </li>
                         }
+                        @if (User.IsInRole(SD.Role_Admin))
+                        {
+
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Travel Management System
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Book" asp-action="Index">Booking</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="NewsLetter" asp-action="Index">NewsLetter</a>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Quote" asp-action="Index">Quotes</a>
+                                    <a class="dropdown-item" asp-area="Customer" asp-controller="Contact" asp-action="Index">Contact</a>
+
+
+                                </div>
+                            </li>
+                        }
+
                         @if (User.IsInRole(SD.Role_Admin))
                         {
                             <li class="nav-item dropdown">
